# ksau-py

./: README.md  pyproject.toml  ruff.toml
scripts/: add_license.py
src/ksau_py/: __init__.py  __main__.py  ksau_api.py  ms_graph_util.py
src/ksau_py/commands/: __init__.py  remotes.py  retarded_graph.py  upload.py
