[project]
name = "ksau-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Firdaus Hakimi", email = "hakimifirdaus944@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "anyio>=4.8.0",
    "azure-identity>=1.20.0",
    "quickxorhash>=1.0.5",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
ksau-py = "ksau_py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
